# ReShadeUtils

./: .gitignore  .project  LICENSE  Pipfile  README.md  ReshadeUtils.spec  __main__.py  dockerfile  launcher.py  launcher.spec  main.py  pyproject.toml  requirements.txt  reshadeUtils.spec  resources.qrc  resources.rc
.github/: FUNDING.yml  pull_request_template
.github/workflows/: build.yml  run_test.yml  run_tests.yml  tests.yml
resources/files/: ReShadePreset.ini  Reshade.ini  style.qss
resources/spec/: launcher.spec  reshadeUtils.spec  version.rc
spec/: launcher.spec  reshadeUtils.spec  resources.rc
src/: __init__.py  config.py  constants.py  create_files.py  edit_form.py  events.py  files.py  form_events.py  game_configs.py  log.py  main_src.py  messages.py  progressbar.py  qtutils.py  resources.py  resources_rc.py  utils.py
src/constants/: messages.py  variables.py
src/data/files/: ReShadePreset.ini
src/data/reshade/: ReShadePreset.ini  Reshade.ini
src/data/spec/: launcher.spec  reshadeUtils.spec  version.rc
src/database/: db.py  db_exceptions.py  db_utils.py
src/database/dal/: config_dal.py  games_dal.py
src/database/migrations/: README  alembic.ini  env.py
src/database/migrations/versions/: 1_create_config_table.py  2_create_games_table.py  3_insert_default_config.py  4_create_triggers.py  5_remove_update_shaders.py
src/database/models/: config_model.py  games_model.py
src/databases/: __init__.py  databases.py
src/databases/postgres/: __init__.py  connection.py
src/databases/sqlite3/: connection.py
src/events/: about_tab_events.py  edit_form_events.py  games_tab_events.py  settings_tab_events.py
src/files/: ReShadePreset.ini  Reshade.ini
src/launcher/: .gitignore  Launcher.spec  launcher.py
src/resources/: resources.py  resources.qrc
src/sql/: __init__.py  config_sql.py  configs_sql.py  database.py  games_sql.py  initial_tables_sql.py  sqlite3_connection.py  tables.py  triggers_sql.py  update_tables_sql.py
src/tests/: conftest.py
src/tests/data/: base_data.py
src/tests/unit/dal/: test_config_dal.py  test_game_dal.py
src/tests/unit/tools/: test_program_utils.py
src/tools/: file_utils.py  misc_utils.py  program_utils.py  qt_utils.py  reshade_utils.py
src/tools/qt/: progressbar.py  qt_utils.py  resources_rc.py
src/ui/: about.html  config.py  config.ui  edit_form.ui  game_configs.ui  main.ui  main_bkp.ui  resources.qrc
src/utils/: __init__.py  constants.py  create_files.py  messages.py  qtutils.py  resources_rc.py  utilities.py  utils.py
tests/: conftest.py
tests/data/: base_data.py
tests/unit/dal/: test_config_dal.py  test_game_dal.py
tests/unit/tools/: test_program_utils.py  test_reshade_utils.py
