[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ReShadeUtils"
version = "5.0.2"
description = "ReShadeUtils"
license = "MIT"
readme = "README.md"
authors = ["Daniel Costa <danieldcsta@gmail.com>"]
maintainers = ["Daniel Costa"]
repository = "https://github.com/ddc/ReshadeUtils"
homepage = "https://github.com/ddc/ReshadeUtils"
package-mode = false
keywords = [
    "python3", "python-3", "python",
    "pyqt", "qt6", "pyqt6", "reshade",
]
classifiers = [
    "Topic :: Games/Entertainment",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Other Environment",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
bs4 = "^0.0.2"
urllib3 = "^2.2.3"
SQLAlchemy = "^2.0.36"
requests = "^2.32.3"
PyQt6 = "^6.8.0"
alembic = "^1.14.0"
ddcDatabases = "^1.0.17"
ddcLogs = "^3.0.9"
ddcUtils = "^1.0.37"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
faker = "^33.1.0"
coverage = "^7.6.9"
pytest-qt = "^4.4.0"
poethepoet = "^0.31.1"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"

[tool.poe.tasks]
_test = "poetry run coverage run --omit=./tests/* --source=./src -m pytest -v"
_coverage = "poetry run coverage report"
tests = ["_test", "_coverage"]
test = ["tests"]
